--- a/Image_Segmentation/coco_format/binary_to_coco_version3.ipynb
+++ b/Image_Segmentation/coco_format/binary_to_coco_version3.ipynb
@@ -53,7 +53,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Define the path to the folder containing the masks\n",
-    "mask_folder = 'C:\\\\Users\\\\pjrio\\\\coco_format\\\\masks\\\\551'\n",
+    "mask_folder = 'C:\\\\Users\\\\path\\\\to\\\\masks\\\\forlder'\n",
     "# Load all of the masks in the folder\n",
     "mask_files = [f for f in os.listdir(mask_folder) if f.endswith('.jpg')]\n",
     "\n",
