--- a/Residential_Building_Identification/getImage.ipynb
+++ b/Residential_Building_Identification/getImage.ipynb
@@ -5,7 +5,7 @@
    "id": "fcb3204d",
    "metadata": {},
    "source": [
-    "This code appears to be a Python script that processes a GeoJSON file and generates map images using the \"allmapsoft\" software.\n",
+    "This code is a Python script that processes a GeoJSON file and generates map images using the \"allmapsoft\" software.\n",
     "\n",
     "Here is a high-level overview of what the code does:\n",
     "\n",
