--- a/Residential_Building_Identification/getImage.ipynb
+++ b/Residential_Building_Identification/getImage.ipynb
@@ -32,34 +32,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4cadb6be",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed: 2358\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Processing data:   0%|          | 0/69943 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "617-N-Willow-Ave_Washington-Willow_AR-72701_United-States_t2358.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Processing data:   0%|          | 1/69943 [00:09<181:25:04,  9.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330-E-Martin-Luther-King-Jr-Blvd_Jefferson-Walker_AR-72701_United-States_t2359.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Processing data:   0%|          | 2/69943 [00:18<179:28:28,  9.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2554-E-River-Birch-Dr_Fayetteville_AR-72703_United-States_t2360.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing data:   0%|          | 2/69943 [00:26<260:19:14, 13.40s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 114\u001b[0m\n\u001b[0;32m    110\u001b[0m command \u001b[38;5;241m=\u001b[39m downloader_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mresult \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m para2 \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m para3 \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m square \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m destination_path \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;66;03m#print(command)\u001b[39;00m\n\u001b[0;32m    112\u001b[0m \n\u001b[0;32m    113\u001b[0m \u001b[38;5;66;03m# Call cmd and run downloader program\u001b[39;00m\n\u001b[1;32m--> 114\u001b[0m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;66;03m#app = Application().start(command, backend='uia', visible=False)\u001b[39;00m\n\u001b[0;32m    116\u001b[0m \u001b[38;5;66;03m#os.system(f'start \"\" /B {command}')\u001b[39;00m\n\u001b[0;32m    117\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    124\u001b[0m \n\u001b[0;32m    125\u001b[0m \u001b[38;5;66;03m#NOTE: Same thing here. I am not sure if i selected the ideal configuration so we might want to look into that\u001b[39;00m\n\u001b[0;32m    126\u001b[0m combine \u001b[38;5;241m=\u001b[39m combiner_path \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m destination_path \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m result \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m jpg meters\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\CSCE4963\\lib\\subprocess.py:505\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    503\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Popen(\u001b[38;5;241m*\u001b[39mpopenargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[0;32m    504\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 505\u001b[0m         stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    506\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m TimeoutExpired \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m    507\u001b[0m         process\u001b[38;5;241m.\u001b[39mkill()\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\CSCE4963\\lib\\subprocess.py:1154\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[1;34m(self, input, timeout)\u001b[0m\n\u001b[0;32m   1151\u001b[0m     endtime \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1153\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1154\u001b[0m     stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_communicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1155\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1156\u001b[0m     \u001b[38;5;66;03m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[0;32m   1157\u001b[0m     \u001b[38;5;66;03m# See the detailed comment in .wait().\u001b[39;00m\n\u001b[0;32m   1158\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\CSCE4963\\lib\\subprocess.py:1528\u001b[0m, in \u001b[0;36mPopen._communicate\u001b[1;34m(self, input, endtime, orig_timeout)\u001b[0m\n\u001b[0;32m   1524\u001b[0m \u001b[38;5;66;03m# Wait for the reader threads, or time out.  If we time out, the\u001b[39;00m\n\u001b[0;32m   1525\u001b[0m \u001b[38;5;66;03m# threads remain reading and the fds left open in case the user\u001b[39;00m\n\u001b[0;32m   1526\u001b[0m \u001b[38;5;66;03m# calls communicate again.\u001b[39;00m\n\u001b[0;32m   1527\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1528\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout_thread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_remaining_time\u001b[49m\u001b[43m(\u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1529\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout_thread\u001b[38;5;241m.\u001b[39mis_alive():\n\u001b[0;32m   1530\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m TimeoutExpired(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, orig_timeout)\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\CSCE4963\\lib\\threading.py:1096\u001b[0m, in \u001b[0;36mThread.join\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m   1093\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot join current thread\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1095\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1096\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wait_for_tstate_lock\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1097\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1098\u001b[0m     \u001b[38;5;66;03m# the behavior of a negative timeout isn't documented, but\u001b[39;00m\n\u001b[0;32m   1099\u001b[0m     \u001b[38;5;66;03m# historically .join(timeout=x) for x<0 has acted as if timeout=0\u001b[39;00m\n\u001b[0;32m   1100\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wait_for_tstate_lock(timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mmax\u001b[39m(timeout, \u001b[38;5;241m0\u001b[39m))\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\CSCE4963\\lib\\threading.py:1116\u001b[0m, in \u001b[0;36mThread._wait_for_tstate_lock\u001b[1;34m(self, block, timeout)\u001b[0m\n\u001b[0;32m   1113\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m   1115\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1116\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mlock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43mblock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m   1117\u001b[0m         lock\u001b[38;5;241m.\u001b[39mrelease()\n\u001b[0;32m   1118\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stop()\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import subprocess\n",
     "import shutil\n",
     "import os, glob\n",
     "import time\n",
+    "from tqdm import tqdm\n",
     "from shapely.geometry import Polygon, box\n",
-    "from geopy.geocoders import Nominatim\n",
+    "from geopy.geocoders import Bing\n",
     "from twilio.rest import Client\n",
-    "geolocator = Nominatim(user_agent=\"geoapiExercises\")\n",
+    "\n",
+    "bing = Bing('Rsz87Aamlj6y0bIKPmZo~mp8U7VP1bidHn2kb58Zl4A~Aj61g85cCZj3F4Ty5fNCeaDgyqAISFpaILP8XXAU06I73VvEwf0cO4ImhrqNN5l0',timeout=100)\n",
+    "geolocator = bing\n",
     "\n",
     "# name of the state we are working with\n",
     "# should we change it to an input?\n",
-    "state_name = 'small_alaska'\n",
+    "state_name = 'arkasnsas'\n",
     "input_folder_name = \"Filtered\"\n",
-    "working_directory_path = r'C:\\Users\\pjrio\\CapstoneII\\\\'\n",
+    "working_directory_path = 'C:\\\\Users\\\\pjrios\\\\Documents\\\\CAPSTONE-II\\\\'\n",
     "img_path = \"images\"\n",
     "result_path = img_path + \"/results\" + \"/\"+state_name\n",
     "\n",
     "# name of the filtered file based on state name example: alaska_filtered.geojson\n",
     "# [state_name]_filtered.geojson is the file generate it for each state during the filtering process\n",
-    "filtered_file_path = input_folder_name + \"/\" + state_name + \"_filtered.geojson\"\n",
+    "filtered_file_path = input_folder_name + \"\\\\\" + state_name + \"_filtered.geojson\"\n",
     "\n",
     "# Note: This paths might need to be change depending on where you installed the software\n",
     "# paths for allmapsoft program\n",
@@ -80,15 +159,14 @@
     "#small_Alaska.geojson only contains some coordinates \n",
     "with open(filtered_file_path, 'r') as f:\n",
     "    data = json.load(f)\n",
-    "    \n",
-    "def reverse_geocode(coordinates):\n",
+    "cycle =1   \n",
+    "def reverse_geocode(coordinates, cycle):\n",
     "    location = geolocator.reverse(coordinates, exactly_one=True)\n",
-    "    address = location.raw['address']\n",
-    "    state = address.get('state', '')\n",
-    "    city = address.get('city', '')\n",
-    "    county = address.get('county', '')\n",
-    "    return f\"{state}_{city}_{county}\"\n",
-    "    \n",
+    "    location = str(location).replace(\", \", \"_\")\n",
+    "    location = str(location).replace(\" \", \"-\")\n",
+    "    location = str(location).replace(\"/\", \"-\")\n",
+    "    return f\"{location}\"\n",
+    "\n",
     "def get_square_bounds(polygon):\n",
     "    # Convert the input polygon to a shapely Polygon\n",
     "    shapely_polygon = Polygon(polygon[0])\n",
@@ -100,12 +178,21 @@
     "    left, bottom, right, top = bbox\n",
     "    return f\"{left} {right} {top} {bottom}\"\n",
     "\n",
+    "checkpoint_file = working_directory_path + \"/checkpoint.txt\"\n",
+    "if os.path.exists(checkpoint_file):\n",
+    "    with open(checkpoint_file, 'r') as f:\n",
+    "        start_index = int(f.readline().strip())\n",
+    "        print(\"Processed: \" + str(start_index) )\n",
+    "else:\n",
+    "    start_index = 0\n",
+    "\n",
+    "\n",
     "# Iterate through the features in the GeoJSON file\n",
-    "i = 0\n",
-    "for feature in data['features']:\n",
+    "for num, feature in enumerate(tqdm(data['features'][start_index:], desc='Processing data')):\n",
+    "    \n",
     "    # Get the coordinates of the current feature\n",
     "    coordinates = feature['geometry']['coordinates']\n",
-    "    \n",
+    "    i = num + start_index\n",
     "    # Get the coordinates \n",
     "    # Format = [left longitude, right longitude, top latitude, bottom latitude]\n",
     "    \n",
@@ -115,11 +202,9 @@
     "    latitude = float(coord[3].strip())\n",
     "    \n",
     "    coordinates = (latitude, longitude) # Example coordinates\n",
-    "    location_string = reverse_geocode(coordinates)\n",
-    "\n",
-    "\n",
-    "    filename = \"{}_task{}.jpg\".format(location_string, i)\n",
-    "    filename = filename.replace(\" \", \"-\")\n",
+    "    location_string = reverse_geocode(coordinates, cycle)\n",
+    "    #print(location_string)\n",
+    "    filename = \"{}_t{}.jpg\".format(location_string, i)\n",
     "    #print(filename)\n",
     "    \n",
     "    # Generate command\n",
@@ -191,8 +276,6 @@
     "    shutil.rmtree(folder_path)\n",
     "    shutil.rmtree(combined_folder_path)\n",
     "\n",
-    "    #increase counter\n",
-    "    i = i + 1\n",
     "\n",
     "    # Use glob to get a list of all the files in the directory\n",
     "    del_dir = working_directory_path +\"/\"+ img_path\n",
@@ -207,7 +290,11 @@
     "    #end = time.time()\n",
     "    #print(f'Running time: {end - start} seconds')\n",
     "\n",
-    "\n",
+    "    # Save the checkpoint\n",
+    "    with open(checkpoint_file, 'w') as f:\n",
+    "        f.write(str(num + start_index))\n",
+    "        \n",
+    "        \n",
     "def send_sms(msg):\n",
     "    account_sid = \"AC59382650e117e848601271b65ab975a2\"\n",
     "    auth_token = \"57bef9f61ca0a41d3283f7a22b4767f0\"\n",
@@ -249,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
