--- a/Residential_Building_Identification/getting_images.ipynb
+++ b/Residential_Building_Identification/getting_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "OTy2gHQg0L8i"
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "id": "ccL3qCXv1UPu"
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "id": "sGdXd4SO0S2x"
    },
@@ -40,23 +40,32 @@
      "output_type": "stream",
      "text": [
       "Paths:\n",
-      "--working_directory_path : G:\\My Drive\\states\\arkansas\n",
-      "--img_path               : G:\\My Drive\\states\\arkansas\\images\n",
-      "--filtered_files_path    : G:\\My Drive\\states\\arkansas\\counties_filtered\n",
-      "--downloader_path        : C:\\allmapsoft\\gsmd\\downloader.exe \n",
-      "--combiner_path          : C:\\allmapsoft\\gsmd\\combiner.exe \n"
+      "--Working directory   : G:\\My Drive\\states\\arkansas\n",
+      "--Filtered files      : G:\\My Drive\\states\\arkansas\\counties_filtered\n",
+      "--Processing          : G:\\My Drive\\states\\arkansas\\images\\processing\n",
+      "--Completed           : G:\\My Drive\\states\\arkansas\\images\\completed\n",
+      "\n",
+      "--Output directory    : C:\\Users\\pjrio\\Box\\Images\\states\\arkansas\n",
+      "--Temporary files     : C:\\Users\\pjrio\\OneDrive - University of Arkansas\\Documents\\temp\n",
+      "\n",
+      "--Downloader          : C:\\allmapsoft\\gsmd\\downloader.exe \n",
+      "--Combiner            : C:\\allmapsoft\\gsmd\\combiner.exe \n"
      ]
     }
    ],
    "source": [
+    "# We are keeping this files in drive\n",
     "# name of the state we are working with\n",
     "working_directory_path = \"G:\\\\My Drive\\\\states\\\\{}\".format(state)\n",
-    "img_path               = \"{}\\\\images\".format(working_directory_path)\n",
-    "processing             = \"{}\\\\processing\".format(img_path)\n",
-    "completed              = \"{}\\\\completed\".format(img_path)\n",
+    "processing             = \"{}\\\\images\\\\processing\".format(working_directory_path)\n",
+    "completed              = \"{}\\\\images\\\\completed\".format(working_directory_path)\n",
+    "filtered_files_path    = \"{}\\\\counties_filtered\".format(working_directory_path)\n",
     "\n",
-    "# name of the filtered file based on state name example: alaska_filtered.geojson\n",
-    "filtered_files_path    = \"G:\\\\My Drive\\\\states\\\\{}\\\\counties_filtered\".format(state)\n",
+    "# We are keeping the images in box\n",
+    "img_path               = \"C:\\\\Users\\pjrio\\\\Box\\\\Images\\\\states\\\\{}\".format(state)\n",
+    "\n",
+    "# Path to some place with full acces to be able to delete files\n",
+    "temp                   = \"C:\\\\Users\\\\pjrio\\\\OneDrive - University of Arkansas\\\\Documents\"+\"\\\\temp\"\n",
     "\n",
     "# Note: This paths might need to be change depending on where you installed the software\n",
     "# paths for allmapsoft program\n",
@@ -65,21 +74,26 @@
     "\n",
     "# Create images directory if it doesn't exist\n",
     "os.makedirs(img_path, exist_ok=True)\n",
+    "os.makedirs(temp_path, exist_ok=True)\n",
     "os.makedirs(processing, exist_ok=True)\n",
     "os.makedirs(completed, exist_ok=True)\n",
     "\n",
     "print(\"Paths:\")\n",
-    "print(\"--working_directory_path : \" + working_directory_path)\n",
-    "print(\"--img_path               : \" + img_path)\n",
-    "print(\"--filtered_files_path    : \" + filtered_files_path)\n",
+    "print(\"--Working directory   : \" + working_directory_path)\n",
+    "print(\"--Filtered files      : \" + filtered_files_path)\n",
+    "print(\"--Processing          : \" + processing)\n",
+    "print(\"--Completed           : \" + completed+\"\\n\")\n",
     "\n",
-    "print(\"--downloader_path        : \" + downloader_path)\n",
-    "print(\"--combiner_path          : \" + combiner_path)"
+    "print(\"--Output directory    : \" + img_path+\"\")\n",
+    "print(\"--Temporary files     : \" + temp+\"\\n\")\n",
+    "\n",
+    "print(\"--Downloader          : \" + downloader_path)\n",
+    "print(\"--Combiner            : \" + combiner_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "id": "Ty78EPIbqUCm",
     "scrolled": false
@@ -116,38 +130,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G:\\My Drive\\states\\arkansas\\counties_filtered\\filtered_Arkansas_Calhoun.geojson\n",
       "Processing: Calhoun_County\n",
-      "--Calhoun_County was completed by: Porfirio-desktop\n",
-      "G:\\My Drive\\states\\arkansas\\counties_filtered\\filtered_Arkansas_Dallas.geojson\n",
+      "**Calhoun_County was completed by: Porfirio-desktop\n",
       "Processing: Dallas_County\n",
-      "--Dallas_County was completed by: Porfirio-desktop\n",
-      "G:\\My Drive\\states\\arkansas\\counties_filtered\\filtered_Arkansas_Lee.geojson\n",
+      "**Dallas_County was completed by: Porfirio-desktop\n",
       "Processing: Lee_County\n",
-      "Processed images: 5177\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing data: 100%|██████████| 1/1 [00:07<00:00,  7.33s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G:\\My Drive\\states\\arkansas\\counties_filtered\\filtered_Arkansas_Monroe.geojson\n",
+      "**Lee_County was completed by: Porfirio-desktop\n",
       "Processing: Monroe_County\n",
-      "Processed images: 1816\n"
+      "**Monroe_County was completed by: TAs_office-Porfirios_desktop\n",
+      "Processing: Woodruff_County\n",
+      "**Woodruff_County was completed by: Porfirio-laptop2\n",
+      "Processing: Cleveland_County\n",
+      "**Cleveland_County was completed by: TAs_office-Porfirios_desktop\n",
+      "Processing: Lafayette_County\n",
+      "**Lafayette_County was completed by: Porfirio-laptop2\n",
+      "Processing: Prairie_County\n",
+      "**Prairie_County was completed by: TAs_office-Porfirios_desktop\n",
+      "Processing: Nevada_County\n",
+      "**Nevada_County was completed by: CSCE-laptop\n",
+      "Processing: Lincoln_County\n",
+      "**Lincoln_County was completed by: TAs_office-Porfirios_desktop\n",
+      "Processing: Desha_County\n",
+      "--Desha_County is being processed by: Porfirio-laptop2\n",
+      "Processing: Perry_County\n",
+      "Processed images: 899\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing data:   0%|          | 2/3676 [00:30<15:30:13, 15.19s/it]\n"
+      "Processing data:   0%|          | 9/6188 [01:22<15:44:03,  9.17s/it]\n"
      ]
     },
     {
@@ -157,7 +170,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 80\u001b[0m\n\u001b[0;32m     78\u001b[0m command \u001b[38;5;241m=\u001b[39m downloader_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mgmid_name \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m para2 \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m para3 \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m square \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m temp \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# Call cmd and run downloader program\u001b[39;00m\n\u001b[1;32m---> 80\u001b[0m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     82\u001b[0m combine \u001b[38;5;241m=\u001b[39m combiner_path \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m temp \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m gmid_name \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m jpg meters\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;66;03m# Call cmd and run combine program\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[16], line 76\u001b[0m\n\u001b[0;32m     74\u001b[0m command \u001b[38;5;241m=\u001b[39m downloader_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mgmid_name \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m para2 \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m para3 \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m square \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m temp \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Call cmd and run downloader program\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     78\u001b[0m combine \u001b[38;5;241m=\u001b[39m combiner_path \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m temp \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m gmid_name \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m jpg meters\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m# Call cmd and run combine program\u001b[39;00m\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\Capstone_II\\lib\\subprocess.py:505\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    503\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Popen(\u001b[38;5;241m*\u001b[39mpopenargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[0;32m    504\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 505\u001b[0m         stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    506\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m TimeoutExpired \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m    507\u001b[0m         process\u001b[38;5;241m.\u001b[39mkill()\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\Capstone_II\\lib\\subprocess.py:1154\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[1;34m(self, input, timeout)\u001b[0m\n\u001b[0;32m   1151\u001b[0m     endtime \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1153\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1154\u001b[0m     stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_communicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1155\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1156\u001b[0m     \u001b[38;5;66;03m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[0;32m   1157\u001b[0m     \u001b[38;5;66;03m# See the detailed comment in .wait().\u001b[39;00m\n\u001b[0;32m   1158\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
       "File \u001b[1;32m~\\anaconda3\\envs\\Capstone_II\\lib\\subprocess.py:1528\u001b[0m, in \u001b[0;36mPopen._communicate\u001b[1;34m(self, input, endtime, orig_timeout)\u001b[0m\n\u001b[0;32m   1524\u001b[0m \u001b[38;5;66;03m# Wait for the reader threads, or time out.  If we time out, the\u001b[39;00m\n\u001b[0;32m   1525\u001b[0m \u001b[38;5;66;03m# threads remain reading and the fds left open in case the user\u001b[39;00m\n\u001b[0;32m   1526\u001b[0m \u001b[38;5;66;03m# calls communicate again.\u001b[39;00m\n\u001b[0;32m   1527\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1528\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout_thread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_remaining_time\u001b[49m\u001b[43m(\u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1529\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout_thread\u001b[38;5;241m.\u001b[39mis_alive():\n\u001b[0;32m   1530\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m TimeoutExpired(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, orig_timeout)\n",
@@ -169,13 +182,12 @@
    ],
    "source": [
     "# Get a list of all the GeoJSON files in the directory\n",
-    "geojson_files = glob.glob(os.path.join(filtered_files_path, \"*.geojson\"))\n",
     "geojson_files = sorted(glob.glob(os.path.join(filtered_files_path, \"*.geojson\")), key=lambda x: os.path.getsize(x))\n",
     "#print(len(geojson_files))\n",
     "# Iterate through each file\n",
     "for geojson_file in geojson_files:\n",
     "    \n",
-    "    print(geojson_file)\n",
+    "    #print(geojson_file)\n",
     "    county_name = os.path.basename(geojson_file).split('_')[2].split('.')[0] + \"_County\"\n",
     "    print(f\"Processing: {county_name}\")\n",
     "\n",
@@ -191,7 +203,7 @@
     "        with open(completed_filepath, 'r') as p:\n",
     "            p_user = p.read()\n",
     "        p.close()\n",
-    "        print(\"--\"+county_name +\" was completed by: \" + p_user)\n",
+    "        print(\"**\"+county_name +\" was completed by: \" + p_user)\n",
     "        continue\n",
     "    elif os.path.exists(processing_filepath):\n",
     "        # check if you created the processing file\n",
@@ -218,11 +230,8 @@
     "    # Create images directory if it doesn't exist\n",
     "    os.makedirs(dst, exist_ok=True)\n",
     "    \n",
-    "    temp = \"{}\\\\images\\\\{}\\\\temp\".format(working_directory_path, county_name)\n",
-    "    os.makedirs(temp, exist_ok=True)\n",
-    "    \n",
     "    # Get the checkpoint file for this GeoJSON file\n",
-    "    checkpoint_file = dst +\"\\\\checkpoint.txt\"\n",
+    "    checkpoint_file = working_directory_path +\"\\\\images\\\\{}\\\\checkpoint.txt\".format(county_name)\n",
     "    if os.path.exists(checkpoint_file):\n",
     "        with open(checkpoint_file, 'r') as f:\n",
     "            start_index = int(f.readline().strip())\n",
