--- a/Classification + Segmentation/2. Training/train_yolov8_on_custom_dataset.ipynb
+++ b/Classification + Segmentation/2. Training/train_yolov8_on_custom_dataset.ipynb
@@ -122,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " We are using roboflow to store, load and annoate data beacause of the simplicity they offer."
+        " We are using roboflow to store, load and annotate data beacause of the simplicity they offer."
       ],
       "metadata": {
         "id": "WDrz1ceF5InT"
