Data files added and scripts updated - 20230504

--- a/Step4_Analysis/merge.ipynb
+++ b/Step4_Analysis/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8eed346b",
+   "id": "aba997fd",
    "metadata": {},
    "source": [
     "# Merge files"
@@ -10,20 +10,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e9356c",
+   "id": "2522b6fc",
    "metadata": {},
    "source": [
     "Merge prediction results (from solar panel segmentation) and sociodemographic dataset to create a merged file. \n",
     "\n",
     "Input files: sdData.csv and predictions.csv\n",
     "\n",
-    "Output file: mergedData.csv (This file contains all the data from sociodemographic data "
+    "Output file: mergedData.csv (This file contains all the data from sociodemographic dataset and solar panel dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b3606ce2",
+   "execution_count": 37,
+   "id": "847177d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "98483a6b",
+   "execution_count": 38,
+   "id": "47638f01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,26 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "30c97822",
+   "execution_count": 39,
+   "id": "5aedd3f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['key', ' population_den', ' area', ' female_per',\n",
-       "       ' children_living_with_single_parents', ' owner_occupied',\n",
-       "       ' some_college_more', ' dropped_out_schoolOrCollege', ' sep_wid_div',\n",
-       "       ' unemp', ' debt_housing_units', ' housing_retirement_income',\n",
-       "       ' females_per_tier1_jobs', ' household_income_less_than_20k',\n",
-       "       ' household_size_greater_than_equal_3', ' age_35_to_54',\n",
-       "       ' family_household', ' household_self_emp', ' hh_dividends',\n",
-       "       ' yr_built', ' electricity_cost_per', ' gross_rent',\n",
-       "       ' pool_publicTransport', ' bike'],\n",
+       "Index(['key', 'population_den', 'area', 'female_per',\n",
+       "       'children_living_with_single_parents', 'owner_occupied',\n",
+       "       'some_college_more', 'dropped_out_schoolOrCollege', 'sep_wid_div',\n",
+       "       'unemp', 'debt_housing_units', 'housing_retirement_income',\n",
+       "       'females_per_tier1_jobs', 'household_income_less_than_20k',\n",
+       "       'household_size_greater_than_equal_3', 'age_35_to_54',\n",
+       "       'family_household', 'household_self_emp', 'hh_dividends', 'yr_built',\n",
+       "       'electricity_cost_per', 'gross_rent', 'pool_publicTransport', 'bike',\n",
+       "       'houses_per'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "fc93b3e5",
+   "execution_count": 40,
+   "id": "384dc256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "02396ae6",
+   "execution_count": 41,
+   "id": "cde331a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c5a486",
+   "id": "8357c44e",
    "metadata": {},
    "outputs": [],
    "source": []
