--- a/Step4_Analysis/setGeoID.ipynb
+++ b/Step4_Analysis/setGeoID.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb5c9c72",
+   "id": "ad2812ea",
+   "metadata": {},
+   "source": [
+    "# setGeoID"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfe036b1",
    "metadata": {},
    "source": [
     "Input: compiled_data.csv\n",
@@ -14,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "eee2b4a4",
+   "execution_count": 89,
+   "id": "43761dcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "c412414a",
+   "execution_count": 90,
+   "id": "f9679df0",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +44,7 @@
        "'data/compiled_data.txt'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "76ba8de9",
+   "execution_count": 91,
+   "id": "272aa1c9",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d5cce22",
+   "id": "ca4b8cf5",
    "metadata": {},
    "source": [
     "## Load FIPS codes into a 2D array "
@@ -92,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "9118df47",
+   "execution_count": 92,
+   "id": "0fd94a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "d9e429d1",
+   "execution_count": 93,
+   "id": "90519a21",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +136,7 @@
        "(2, 'Benton', '007')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9937a9",
+   "id": "7198e4f7",
    "metadata": {},
    "source": [
     "FIPScodes[0][3], FIPScodes[1][3] gives county name and tract number respectively. Note block group is always a single digit number so there is no need for translation for block group number. "
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f918bd",
+   "id": "8e3084d0",
    "metadata": {},
    "source": [
     "## Import data"
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f7644b",
+   "id": "00ef5c69",
    "metadata": {},
    "source": [
     "The following cell imports the data into different hard-coded arrays. This can be a generalized later. "
@@ -163,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "2538ea4a",
+   "execution_count": 94,
+   "id": "30f65d0d",
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "2ba39dc4",
+   "execution_count": 95,
+   "id": "1319bc11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0f5124d0",
+   "execution_count": 96,
+   "id": "23e80535",
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "bfa67886",
+   "execution_count": 97,
+   "id": "092dea53",
    "metadata": {},
    "outputs": [
     {
@@ -377,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5b335e95",
+   "execution_count": 100,
+   "id": "543e0e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +397,7 @@
     "with open(output_file, 'w', newline='') as file:\n",
     "    writer = csv.writer(file, delimiter=',', quoting=csv.QUOTE_NONE, escapechar='\\\\')\n",
     "    if count == 0:\n",
-    "        file.write(\"key,population_den,area,female_per,children_living_with_single_parents,owner_occupied,some_college_more,dropped_out_schoolOrCollege,sep_wid_div,unemp,debt_housing_units,housing_retirement_income,females_per_tier1_jobs,household_income_less_than_20k,household_size_greater_than_equal_3,age_35_to_54,family_household,household_self_emp,hh_dividends,yr_built,electricity_cost_per,gross_rent,pool_publicTransport,bike,houses_per\\n\")\n",
+    "        file.write(\"key,population_den,area,female_per,children_living_with_single_parents,owner_occupied,some_college_more,dropped_out_schoolOrCollege,sep_wid_div,unemp,debt_housing_units,housing_retirement_income,females_per_tier1_jobs,household_income_less_than_20k,household_size_greater_than_equal_3,age_35_to_54,family_household,household_self_emp,hh_dividends,yr_built,electricity_cost_per,gross_rent,pool_publicTransport,bike\\n\")\n",
     "    for row in result_array:\n",
     "        writer.writerow(row.split(', '))"
    ]
@@ -397,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd35da20",
+   "id": "de6abd4f",
    "metadata": {},
    "outputs": [],
    "source": []
